# salesforce-mcp-claude

./: .gitignore  HOSTED_MCP.md  Procfile  README.md  mcp_client_config.json  pyproject.toml  railway.toml  requirements.txt
src/: mcp_bridge.py  server.py  web_server.py
src/assets/: einstein_field.tmpl
src/assets/create_einstein_model_tmpl/: package.xml
src/assets/create_einstein_model_tmpl/appTemplates/##template_name##/: create-chain.json  template-info.json
src/assets/create_einstein_model_tmpl/appTemplates/##template_name##/ml/containers/: ModelContainer.json
src/assets/create_einstein_model_tmpl/appTemplates/##template_name##/ml/setups/: ModelSetup.json
src/salesforcemcp/: __init__.py  __main__.py  definitions.py  implementations.py  server.py  sfdc_client.py
